# monocular_people_tracking

./: .gitmodules  CMakeLists.txt  README.md  package.xml
include/kkl/alg/: nearest_neighbor_association.hpp
include/kkl/math/: gaussian.hpp
include/monocular_people_tracking/: association_distance.hpp  observation.hpp  people_tracker.hpp  person_tracker.hpp  track_system.hpp
launch/: jetson_csi_camera.launch  monocular_people_tracking.launch  monocular_people_tracking_sim.launch  pointgrey_camera.launch  robot_frames.launch  tf_openpose.launch  web_camera.launch
msg/: Track.msg
rviz/: monocular_people_tracking.rviz
scripts/: calibrate_camera_pose.py
src/: monocular_people_tracking_node.cpp  people_tracker.cpp  person_tracker.cpp  track_system.cpp
