<?xml version="1.0"?>
<package format="2">
  <name>monocular_people_tracking</name>
  <version>0.0.0</version>
  <description>The monocular_people_tracking package</description>

  <maintainer email="koide@dei.unipd.it">koide</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>tfpose_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
